--- a/odoo/docker-compose.yml
+++ b/odoo/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - odoo-web-data:/var/lib/odoo
       - ./config:/etc/odoo
       - ./addons:/mnt/extra-addons
-    command: -c "pip3 install pandas -y"
+    command: -c "pip3 install pandas"
     environment:
       - HOST=dbcustom
       - USER=odoocustom
